--- a/airs/deploy/ephemeral/terraform/index.html
+++ b/airs/deploy/ephemeral/terraform/index.html
@@ -26,7 +26,7 @@
       <img src="https://web.eph.fluidattacks.com/img/use-the-force.png">
       <h1 class="text-center">Welcome to Web's Ephemeral Site</h1>
         <p class="paragraph-1">You can access a running ephemeral environment by entering
-            <a href="https://web.eph.fluidattacks.com/your-branch-name/web/">https://web.eph.fluidattacks.com/your-branch-name/web/</a></p>
+            <a href="https://web.eph.fluidattacks.com/your-branch-name/">https://web.eph.fluidattacks.com/your-branch-name/</a></p>
   </div>
 </section>
 
